. [NEW] Template: AppController rootViewController is a UINavigationController
. [NEW] Test: Added Director tests. Tests integration with GameCenter and other UIKit components (iOS)
. [FIX] Actions: IntervalAction works OK in rewind mode
. [FIX] Actions: EaseIn/EaseOut actions support float arguments
. [FIX] Director: CC_DIRECTOR_INIT() centers main window (Mac)
. [FIX] Menu: Blocks API doesn't crash on Mac
. [FIX] RenderTexture: Works with RGB888 (issue #1293)
. [FIX] RenderTexture: Supports NPOT textures (issue #1291)
. [FIX] Sprite: isFrameDisplayed takes into accout the offset (issue #1295)
. [FIX] Test: ChipmunkTest works on Mac
. [FIX] Tests: Box2dTest works on Mac
. [FIX] Tests: MenuTestBlocks removed. Merged into MenuTest
. [FIX] Test: ShaderTest works (issue #1285)
. [FIX] Test: ShaderTest centers shaders (Mac)
. [FIX] Texture2D: Uses CGImageRef instead of UIKit for iOS API
. [FIX] TileMaps: Re-added "cc_vertexz" property

version 2.0-beta 27-Nov-2011
. [NEW] v1.1 Forward-ported changes:
		reorderSprite: faster reordering sprites/nodes
		Particle batches: Particles support batch rendering
		TMX parse from memory
		events fixes
		ARC compatible
. [NEW] Director: Added API to display Milliseconds Per Frame
. [NEW] LabelBMFont: Added support for alignment, also in multiline
. [NEW] Node: Added glServerState property. Ideal to enable/disabled blending for certain nodes.
. [NEW] Particle: ParticlePoint removed
. [NEW] Shader: Added AlphaTesting shader
. [NEW] DrawingPrimitives: DrawPoint and PointSize fixed both on Mac and iOS. DrawPoly fixed on Mac
. [FIX] Node#draw() Added helper macro to setup draw
. [FIX] Node#draw() removed [super draw]. Draw() should be "atomic". It shall not depend on a possible state of super class.
. [FIX] ccGLState: Added cache for texture unit and GL_BLEND
. [FIX] Paticles: Faster initialization: texCoords are generated only once.
. [FIX] SpriteFrameCache: readded API to create spriteFrames from CCTexture2D