@@ -19,6 +19,7 @@ version 2.0-beta2 XX-Jan-2012
 . [FIX] Actions: IntervalAction works OK in rewind mode
 . [FIX] Actions: EaseIn/EaseOut actions support float arguments
 . [FIX] Director: CC_DIRECTOR_INIT() centers main window (Mac)
+. [FIX] Grid: Fixed two big memory leaks (issue #1280)
 . [FIX] Menu: Blocks API doesn't crash on Mac
 . [FIX] RenderTexture: Works with RGB888 (issue #1293)
 . [FIX] RenderTexture: Supports NPOT textures (issue #1291)
